feat(07-02): add chat persistence repositories